# codex-ai

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/en/api/: index.md
docs/en/api/core/: dispatcher.md  exceptions.md  protocol.md  router.md  sync.md
docs/en/api/providers/: anthropic.md  gemini.md  multi.md  openai.md  openrouter.md
docs/en/architecture/core/: README.md  data_flow.md
docs/en/architecture/providers/: README.md  data_flow.md
docs/ru/architecture/core/: README.md  data_flow.md
docs/ru/architecture/providers/: README.md  data_flow.md
src/codex_ai/: __init__.py
src/codex_ai/core/: __init__.py  dispatcher.py  exceptions.py  protocol.py  router.py  sync.py
src/codex_ai/providers/: __init__.py  anthropic_.py  gemini.py  multi.py  openai.py  openrouter.py
tests/: conftest.py
tests/integration/: conftest.py  test_providers_integration.py
tests/unit/: conftest.py  test_public_api.py
tests/unit/core/: test_dispatcher.py  test_exceptions.py  test_protocol.py  test_router.py  test_sync.py
tests/unit/providers/: test_anthropic_provider.py  test_gemini_provider.py  test_multi_provider.py  test_openai_provider.py  test_openrouter_provider.py
tools/dev/: check.py
v0.1.0/: 404.html  index.html  objects.inv
v0.1.0/changelog/: index.html
v0.1.0/en/api/: index.html
v0.1.0/en/architecture/core/: index.html
v0.1.0/en/architecture/providers/: index.html
v0.1.0/ru/architecture/core/: index.html
v0.1.0/ru/architecture/providers/: index.html
v0.1.0/search/: search_index.json
v0.2.0/: index.html  objects.inv
v0.2.0/changelog/: index.html
v0.2.0/en/architecture/core/: index.html
v0.2.0/en/architecture/providers/: index.html
v0.2.0/ru/architecture/providers/: index.html
v0.2.0/search/: search_index.json
v0.2.1/: index.html
v0.2.1/changelog/: index.html
v0.2.1/en/api/: index.html
v0.2.1/ru/architecture/providers/: index.html
v0.2.1/search/: search_index.json
v0.2.2/: 404.html  index.html  objects.inv
v0.2.2/changelog/: index.html
v0.2.2/en/architecture/providers/: index.html
v0.2.2/search/: search_index.json
v0.2.3/: index.html
v0.2.3/changelog/: index.html
v0.2.3/ru/architecture/core/: index.html
v0.2.3/search/: search_index.json
(+38 files in other folders)
